# atlas-agent

./: .env.example  .gitignore  LICENSE  README.md  ecosystem.config.cjs  package-lock.json  package.json
.github/workflows/: ci.yml
agent/: package.json
agent/src/: chain.ts  config.ts  index.ts  mcp.ts  orchestrator.ts  policyGuard.ts  reasoning.ts  types.ts  x402Client.ts
agent/test/: unit.test.ts
contracts/: Cargo.toml  Odra.toml  build-wasm.sh  build.rs  rust-toolchain.toml
contracts/src/: decision_registry.rs  lib.rs  treasury_vault.rs
docs/: TESTNET-WALKTHROUGH.md  architecture.mmd  demo-script.md
scripts/: deploy-x402-token.sh  monitor.mjs  setup-facilitator.sh
services/: package.json
services/src/: data.ts  defillama.ts  index.ts  marketsignal.ts  x402.ts
services/test/: defillama.test.ts  marketsignal.test.ts  unit.test.ts
test/: e2e.mts  resilience.mts
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: Onboarding.tsx  globals.css  layout.tsx  page.tsx  report.ts
