[package]
name = "atlas-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.8.0", default-features = false }
odra-casper-livenet-env = { version = "2.8.0", optional = true }
# NOTE: serde_json was an unused dependency. It pulls serde_core/std, which
# collides with Odra's no_std wasm panic handler (E0152 duplicate `panic_impl`)
# and breaks `cargo odra build`. The contracts emit JSON via println! in
# livenet.rs, so it is intentionally omitted.

[dev-dependencies]
odra-test = { version = "2.8.0", default-features = false }

# odra-build runs in build.rs (sets the `odra_module` cfg) and in the native
# schema bin. It must NOT be in the wasm contract build, so it is scoped to the
# build script and non-wasm targets only.
[build-dependencies]
odra-build = { version = "2.8.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.0", default-features = false }

[features]
default = []
livenet = ["odra-casper-livenet-env"]

[[bin]]
name = "atlas_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "atlas_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "atlas_livenet"
path = "src/bin/livenet.rs"
required-features = ["livenet"]
test = false

[profile.release]
codegen-units = 1
lto = true
